Fixed bug where the toast message was hidden behind the header due to the high z-index I gave the header. Users will now see success notifications for adding and deleting prayers.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -737,7 +737,7 @@ textarea {
   background-color: #fefce8;
   position: sticky;
   top: 0;
-  z-index: 999999;
+  z-index: 9999;
 }
 .header__content {
   display: flex;
