--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,7 +5,7 @@
   background-color: $color-bg-start;
   position: sticky;
   top: 0;
-  z-index: 999999;
+  z-index: 9999;
 
   &__content {
     display: flex;
